--- a/ui/package.json
+++ b/ui/package.json
@@ -12,6 +12,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.2.4",
     "css-loader": "^6.7.1",
+    "dotenv-webpack": "^7.1.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.2",
